--- a/tests/Galek/css/combined.css
+++ b/tests/Galek/css/combined.css
@@ -1,9 +1,9 @@
 body{
-  background: #000000;
+  background: #000;
 }
 body{
   color: #000;
 }
 body{
-  background: #fff;
+  background: #ffffff;
 }
